# hubeau_water_data

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml  requirements-test.txt
.devcontainer/: devcontainer.json
.github/workflows/: validate.yml
custom_components/hubeau_water_data/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  geo.py  manifest.json  sensor.py
custom_components/hubeau_water_data/translations/: en.json
custom_components/hubeau_water_quality/: api.py  config_flow.py  coordinator.py  manifest.json
custom_components/hubeau_water_quality/translations/: fr.json
lovelace/: dashboard_hubeau.yaml
tests/: __init__.py  conftest.py  test_api.py  test_coordinator.py  test_geo.py
